Converts the button to a toggle switch to view full cache. Fixing colors to align with the overall color scheme. Centers the state sidebar. Rounds out the top edges of the Timeline. Makes the getCache button smaller and fit with the color scheme.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,7 +6,7 @@
 
 :root {
   --main-bg: #0a090c;
-  --secondary-bg-hover: #176e0b28;
+  --secondary-bg-hover: #19930928;
   --tertiary-bg-hover: #3ea44c;
   --text-color: #f0edee;
   --light-border: #90ddf0;
@@ -20,7 +20,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  background-color: rgba(251, 5, 5, 0.3);
+  background-color: rgba(5, 218, 251, 0.3);
   border-radius: 10px;
 }
 
@@ -38,6 +38,14 @@ body {
   width: 200px;
   height: 300px;
   align-self: flex-end;
+  background-color: var(--nav-buttons);
+  border: initial;
+  color: var(--text-color);
+}
+
+.getCache:hover {
+  background-color: var(--nav-buttons-hover);
+  cursor: pointer;
 }
 
 .info-container,
@@ -95,6 +103,7 @@ body {
 
 .key-display:hover {
   background-color: var(--tertiary-bg-hover);
+  cursor: pointer;
 }
 
 .active-key {
@@ -106,6 +115,11 @@ body {
   height: 73vh;
 }
 
+.inner-info-wrapper h2 {
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
 .history-view {
   display: flex;
   flex-direction: column;
@@ -114,6 +128,7 @@ body {
   max-height: 80vh;
   width: 10rem;
   border: 1px solid var(--dark-border);
+  border-radius: 10px 10px 0px 0px;
 }
 
 .history-view h1 {
@@ -133,6 +148,14 @@ body {
   overflow-y: auto;
 }
 
+.unchanged-green {
+  color: green;
+}
+
+.unchanged-red {
+  color: red;
+}
+
 /* THE FOLLOWING TWO CSS LINES CONTROL DIFF INFO FONT */
 .jsondiffpatch-delta {
   font-size: 0.8em;
@@ -145,6 +168,8 @@ body {
 .react-json-view {
   font-family: 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', Monaco, Courier,
     monospace;
+  padding-top: 10px;
+  padding-left: 10px;
 }
 
 .query-card {
@@ -160,6 +185,7 @@ body {
 
 .query-card:hover {
   background-color: var(--secondary-bg-hover);
+  cursor: pointer;
 }
 
 .active-query {
@@ -215,18 +241,24 @@ body {
 
 .nav-button:hover {
   background-color: var(--nav-buttons-hover);
+  cursor: pointer;
 }
 
 .state-sidebar {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   max-height: 73vh;
   padding-bottom: 10px;
   width: 20vw;
   overflow-y: auto;
   background-color: var(--secondary-bg-hover);
+}
+
+.keylist-wrapper {
+  height: 90%;
+  width: 100%;
 }
 
 .cache-display {
@@ -264,6 +296,63 @@ body {
 
 .backward-button {
   transform: rotateY(180deg);
+}
+
+.getCache {
+  width: 75px;
+  height: 25px;
+}
+
+.unchanged-toggle-div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 2rem;
+  width: 15%;
+}
+
+/* toggle  */
+
+input[type='checkbox'] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 40px;
+  height: 20px;
+  background: grey;
+  display: block;
+  border-radius: 100px;
+  position: relative;
+}
+
+label:after {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 5px;
+  width: 15px;
+  height: 15px;
+  background: #fff;
+  border-radius: 90px;
+  transition: 0.3s;
+}
+
+input:checked + label {
+  background: #bada55;
+}
+
+input:checked + label:after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+}
+
+label:active:after {
+  width: 13px;
 }
 
 @media only screen and (max-width: 500px) {
